@@ -1,5 +1,11 @@
 2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/disk/pata.c (grub_pata_pio_read)
+	[GRUB_MACHINE_MIPS_QEMU_MIPS]: Don't byteswap even on mipseb.
+	(grub_pata_pio_write) [GRUB_MACHINE_MIPS_QEMU_MIPS]: Likewise.
+
+2012-06-06  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Extend automated tests to qemu-mips.
 
 	* Makefile.am: reorganise tests and enable qemu-mips.
